# sigma_chan_getter_robo

./: #twifemi.dat#  .coverage  .gitignore  AA.py  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  mophology_analysis.py  morphology_analysis.py  pyproject.toml  sigma_chan_getter_robo.py
.github/workflows/: codeql-analysis.yml
database/sql/: initial_create_table.sql
db_oparators/: Dockerfile  Makefile  README.md  alembic.ini  db_operators.py  pyproject.toml
db_oparators/database/: models.py  operators.py  settings.py
db_oparators/migration/: __init__.py  env.py
db_oparators/tests/: test_getter_robo_db.py
getter_robo_db/: Dockerfile  Makefile  __init__.py  alembic.ini  docker-compose.yaml  models.py  operators.py  pyproject.toml  settings.py
getter_robo_db/database/: __init__.py  models.py  operators.py
getter_robo_db/migration/: __init__.py  env.py
getter_robo_db/migration/versions/: 333a3209a6be_create_tables.py
getter_robo_db/tests/: test_getter_robo_db.py
manifests/: cron_job.yaml  cron_workflow.yaml  data_pvc.yaml  persistent_data_volume.yaml  single-pod.yaml  single_run.yaml
minio/: policy.json
sigma_chan_db/: README.md  docker-compose.yaml
sigma_chan_db/db/sql/: initial_create_table.sql
sigma_chan_db/operators/: Dockerfile
sigma_chan_db/operators/database/: settings.py
sigma_chan_db/operators/migration/: env.py
sigma_chan_getter_robo/: main.py
sigma_chan_getter_robo/analysis/: aggre_keywd.py
sigma_chan_getter_robo/data_structure/parameters/: __init__.py  database_parameters.py  parameters.py  storage_parameters.py  tweet_parameters.py
sigma_chan_getter_robo/post_process/: __init__.py  post_processor.py
sigma_chan_getter_robo/post_process/components/: __init__.py  configurator.py  data_organizer.py
sigma_chan_getter_robo/pre_process/: __init__.py  configurator.py
sigma_chan_getter_robo/sigma_chan_db/: Dockerfile-dev  README.md  alembic.ini  db_operators.py  pyproject.toml
sigma_chan_getter_robo/sigma_chan_db/database/: __init__.py  configurator.py  models.py  operators.py  settings.py
sigma_chan_getter_robo/sigma_chan_db/migration/: env.py
sigma_chan_getter_robo/sigma_chan_db/tests/: test_getter_robo_db.py
sigma_chan_getter_robo/tweet_getter/: Dockerfile  tw_api_loader.py  tweet-getter-robo.py
tests/: conftest.py
tests/data_structure/: test_credentials.py  test_parameters.py
tests/fixtures/: fixture_parameters.py  fixtures_data_storage.py  fixtures_tweet_getter.py
tests/io/: test_tweet_getter.py
tests/pipelines/: test_friends_tweets_getter.py
tests/sigma_chan_db/: test_getter_robo_db.py
tweet_getter/: Makefile  pyproject.toml  tw_api_loader.py  tweet-getter-robo.py
tweet_getter/components/: morphology_analysis.py  sigma_chan_getter_robo.py
tweet_getter/components/operators/: __init__.py  getter_functions.py
tweet_getter/data_structure/: __init__.py  credentials.py
tweet_getter/io/: __init__.py  tweet_getter.py
tweet_getter/pipelines/: __init__.py  friends_tweets_getter.py
tweet_getter/tests/components/operators/: test_getter_functions.py
tweet_getter/tests/data_structure/: test_credentials.py
tweet_getter/tests/io/: test_tweet_getter.py
tweet_getter/tests/pipelines/: test_friends_tweets_getter.py
(+34 files in other folders)
