[tool.poetry]
name = "sigma-chan-getter-robo"
version = "0.0.0"
description = ""
authors = ["sakairi-nobuyuki <SAKAIRI.Nobuyuki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.10.0"
isort = "^5.10.1"
pytest = "^7.1.3"
tweepy = "^4.10.1"
typer = "^0.6.1"
mysqlclient = "^2.1.1"
SQLAlchemy = "^1.4.42"
alembic = "^1.8.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
exclude = '''
(
     \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | venv
    | \.idea
    | \.vscode
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | db
 )
 '''

[tool.isort]
profile = "black"
line_length = 120
skip_glob = "*/migrations/*.py"