[tool.poetry]
name = "getter_robo_db"
version = "0.0.0"
description = ""
authors = ["sakairi-nobuyuki <SAKAIRI.Nobuyuki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mysqlclient = "^2.1.1"
SQLAlchemy = "^1.4.39"
pytest = "^7.1.2"
alembic = "^1.8.1"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
